# zakaz

./: Makefile.am  README.md  catalog.csv  compile_commands.json  configure.in  zakaz.glade  zakaz.gladep
src/: .main.c.swp  Makefile  Makefile.am  SQLiteConnect.c  SQLiteConnect.h  callbacks.c  data_view.h  excel.h  getbundle.h  interface.c  iowin32.c  iowin32.h  libxlsxwriter_open_template.h  main.c  miniunz.c  openfile.h  sqlite3.h  strfind.h  zakaz.h  zakazi_view.h
